# postvote-api

./: .env  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  gunicorn.service  main.py  nginx  pyproject.toml  requirements-backup.txt
.github/workflows/: build-deploy.yml
alembic/versions/: 129a181d91c2_create_posts_table.py  1e5113982c44_add_user_table.py  2632f82c7092_auto_vote.py  34d7bbf3c370_add_content_column_to_post_table.py  61606bdeea76_add_phone_number.py  727cd72df26c_add_last_few_columms_to_posts_table.py  ccc70161dc3a_add_foreign_key_to_posts_table.py
app/: calculations.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  vote.py
tests/: conftest.py  database.py  test_calculations.py  test_posts.py  test_users.py
