[project]
name = "learn-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "datetime>=6.0",
    "fastapi[standard]>=0.124.4",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.11",
    "sqlalchemy>=1.4.0,<2.0.0",
]
